# esp32_iron

./: .cproject  .project  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  buzzer.c  buzzer.h  console.c  console.h  device.c  device.h  display.c  display.h  main.c  max6675.c  max6675.h  measurer.c  measurer.h  nets_application.c  nets_application.h  nvs_application.c  nvs_keys.h  output.c  output.h
