idf_component_register(
	SRCS 			"main.c" 
					"nvs_application.c" 					
    				"measurer.c"                 
    				"output.c"             
					"display.c"                            
					"device.c"  
   					"console.c"
   					"max6675.c"
   					"buzzer.c"
   					"esp_eth_phy_enc28j60.c"
   					"esp_eth_mac_enc28j60.c"
   					"nets_application.c"   					
)
